# ynot.lol-web

./: README.md  index.html
backend/: app.py  pyproject.toml
notes/: master.md
src/: index.html
src/styles/: styles.css
ynot-frontend/: package-lock.json  package.json
ynot-frontend/src/pages/: index.js
ynot-frontend/src/styles/: Home.module.css  globals.css
