[tool.poetry]
name = "backend"
version = "0.1.0"
description = "ynot backend api"
authors = ["Arnav Surve <arnav@surve.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
